--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@faker-js/faker": "^8.4.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@playwright/test": "^1.46.0",
+    "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.3.0",
     "@types/react": "^18",
